@@ -20,19 +20,25 @@
   IN THE SOFTWARE.
 -->
 
-<!-- Import translations for given language -->
-{% import "partials/language/" + config.theme.language + ".html" as lang %}
-
-<!-- Import fallback translations -->
-{% import "partials/language/en.html" as fallback %}
-
-<!-- Re-export translations -->
+<!-- Translations: Persian -->
 {% macro t(key) %}{{ {
-  "direction": config.theme.direction,
-  "search.language": (
-    config.extra.search | default({})
-  ).language,
-  "search.tokenizer": (
-    config.extra.search | default({})
-  ).tokenizer | default("", true),
-}[key] or lang.t(key) or fallback.t(key) }}{% endmacro %}
+  "language": "fa",
+  "direction": "rtl",
+  "clipboard.copy": "کپی کردن",
+  "clipboard.copied": "کپی شد",
+  "edit.link.title": "این صفحه را ویرایش کنید",
+  "footer.previous": "قبلی",
+  "footer.next": "بعدی",
+  "meta.comments": "نظرات",
+  "meta.source": "منبع",
+  "search.language": "en",
+  "search.placeholder": "جستجو",
+  "search.result.placeholder": "برای شروع جستجو تایپ کنید",
+  "search.result.none": "سندی یافت نشد",
+  "search.result.one": "1 سند یافت شد",
+  "search.result.other": "# سند یافت شد",
+  "search.tokenizer": "[\s]+",
+  "skip.link.title": "پرش به محتویات",
+  "source.link.title": "رفتن به مخزن",
+  "toc.title": "فهرست موضوعات"
+}[key] }}{% endmacro %}
